Fixing activity catalog and media kit description on mobile

--- a/css/main.less
+++ b/css/main.less
@@ -793,6 +793,11 @@ section.activities-section {
         }
       }
     }
+    & > .row > div:not(:first-child) {
+      @media (max-width: @screen-sm-min) {
+        margin-top: 0.8em;
+      }
+    }
   }
   .activityContent {
     padding:10px;
